# Ryntra-Project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GenAllNodesVisitor.ps1  GenerateANTLRSource.ps1  README.md  ROADMAP.md  Rules.md  RunTest.ps1  TODO.md  main.cpp  tst.cpp
ANTLR/: Ryntra.g4
ANTLR/antlr-generated/antlr/: Ryntra.interp  Ryntra.tokens  RyntraBaseListener.cpp  RyntraBaseListener.h  RyntraBaseVisitor.cpp  RyntraBaseVisitor.h  RyntraLexer.cpp  RyntraLexer.h  RyntraLexer.interp  RyntraLexer.tokens  RyntraListener.cpp  RyntraListener.h  RyntraParser.cpp  RyntraParser.h  RyntraVisitor.cpp  RyntraVisitor.h
CodeEditor/: CMakeLists.txt  Resources.qrc  main.cpp
CodeEditor/Editor/Editor/: CodeEditor.cpp  CodeEditor.h  LineNumberArea.h
CodeEditor/Editor/Highlighter/: Color.h  Highlighter.cpp  Highlighter.h
CodeEditor/Editor/Resources/ColorScheme/: CatppuccinMacchiato.xml
CodeEditor/Editor/Resources/LanguageDefinition/: LanguageDef.xsd  Ryntra.xml
CodeEditor/MainWindow/: MainWindow.cpp  MainWindow.h  Style.qss
Compiler/AST/: ASTBuilder.cpp  ASTBuilder.h  ASTNodes.cpp  ASTNodes.h  ASTVisitor.h
Compiler/AST/Nodes/: Declarations.h  Expressions.h  Literals.h  Statements.h
Compiler/IR/: BasicBlock.cpp  BasicBlock.h  Constant.cpp  Constant.h  Function.cpp  Function.h  HLIRBuilder.cpp  HLIRBuilder.h  IRBuilder.cpp  IRBuilder.h  IRGenerator.cpp  IRGenerator.h  ImmediateValue.h  Instruction.cpp  Instruction.h  LLIRBuilder.cpp  LLIRBuilder.h  Module.cpp  Module.h  Type.cpp  Type.h  Value.cpp  Value.h
Compiler/IR/Demos/: Arithmetic.rir  Function.rir  HelloWorld.rir  IfStatement.rir  VariableDeclaration.rir
Compiler/IR/Generator/: ControlFlow.cpp  Expressions.cpp  Memory.cpp  Operations.cpp  ShortCircuit.cpp  Variables.cpp
Compiler/IR/IRSource/: Arithmetic.rsir  HelloWorld.rir  HelloWorld.rsir  IRReference.md
Compiler/IR/MLIRDefs/: Ryntra.td
Compiler/IRGenerator/: IRGenerator.cpp  IRGenerator.h
Compiler/RyntraCRT/: CMakeLists.txt
Compiler/RyntraCRT/include/: ToString.h
Compiler/RyntraCRT/src/: ToString.c
Compiler/Semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  Symbol.h  SymbolTable.cpp  SymbolTable.h  TypeSystem.h  TypedAST.h
Compiler/Semantic/Sema/: Assignments.cpp  ControlFlow.cpp  Declarations.cpp  FunctionCall.cpp  Literals.cpp  Operators.cpp  RefAndPtr.cpp
Compiler/Semantic/TypedAST/: TypedASTAdvanced.h  TypedASTBase.h  TypedASTNodes.h
Compiler/Test/: 0_HelloWorld.rynt  Break-Continue-Statement.rynt  FizzBuzz.rynt  Float-And-Double.rynt  For-Statement.rynt  Hello-World.rynt  If-Statement.rynt  Integer-Bitwise-Calculating.rynt  Integer-Calculating.rynt  While-Statement.rynt
Compiler/VM/: Bytecode.h  BytecodeGenerator.cpp  BytecodeGenerator.h  Frame.h  Instruction.h  Interpreter.cpp  Interpreter.h  OpCode.h  RuntimeValue.h  Stack.h  VM.cpp  VM.h  VMCodeGenerator.cpp  VMCodeGenerator.h  VMValue.h  Value.h  VirtualMachine.cpp  VirtualMachine.h
Compiler/VM/Documentation/: OpCode.md
Compiler/VM/Instructions/: Instruction.h  OpCode.h
Documentation/ryntra-code-reference/: mkdocs.yml
Documentation/ryntra-code-reference/docs/: index.md
Documents/Reference/: IR Reference.md
Examples/: helloworld-without-comment.rynt  helloworld.rynt
Rycc/: CMakeLists.txt
Rycc/Lexer/: Lexer.cpp
Scripts/CheckTest/: CheckTest.py
Scripts/GenAllNodesVisitor/: GenAllNodesVisitor.py  NodesList.txt
Test/Compilation/: 1.1 Hello World.rynt  2.1 int Declaration.rynt  2.2 int Arithmetic Operation.rynt  2.3 int Assignment.rynt  2.4 int Bitwise Operation.rynt  3.1 long Declaration.rynt  3.2 long Arithmetic Operation.rynt  3.3 long Bitwise Operation.rynt  3.4 int and long Casting.rynt  3.5 Scan Function.rynt  4.1 bool Declare Assign.rynt  4.2 Comparison Operators.rynt  4.3 if Blocks.rynt  4.4 else and else if Blocks.rynt  4.5 Conditional Not Operator.rynt  5.1 while Blocks.rynt  5.2 break Blocks.rynt  5.3 continue Blocks.rynt  5.4 Self Inc Dec Operators.rynt  5.5 for Blocks.rynt  6.1 Array Declaration.rynt  6.2 Array Index Access.rynt  6.3 Array Index Assignment.rynt  7.1 Angle Bracket Syntax.rynt  7.10 Pointer Comparison.rynt  7.11 Array with Pointer.rynt  7.2 Reference.rynt  7.3 Unsafe Block.rynt  7.4 to 7.6 Pointer.rynt  7.7 null Keyword.rynt  7.8 Pointer Operation.rynt  7.9 New and Delete on Heap.rynt  8.1 Conditional and Operator.rynt  8.2 Conditional or Operator.rynt  HelloWorld.rynt
Test/Compilation/Builtins/: builtin_print.rynt
Test/Compilation/Result/: Result.json  ResultSchema.json
Utility/ColoredTextManager/: ColoredTextManager.h
Utility/ErrorHandler/: ErrorHandler.cpp  ErrorHandler.h  LexParseErrorHandler.h
Utility/SourceLocation/: SourceLocation.h
include/defs/: ryntra_defs.h
rasm/: CMakeLists.txt  README.md  rasm.cpp
rasm/assembler/: asm.h  instruction.h  objectfile.h  parser.cpp  parser.h
rasm/assembler/Error/: errorhandling.h
rasm/assembler/error/: errorhandling.h
rasm/assembler/instruction/: instruction_base.h  instruction_info.h  instruction_sets  instruction_types.h  instructions.h  registers.h
rasm/assembler/instruction/instruction_sets/: arithmetic.h  control_flow.h  data_transfer.h  floating_point.h  logical.h  system.h
rasm/assembler/utils/: targetPlat.h
rasm/test/: HelloWorld.asm  HelloWorldATT.asm
ryntra-common/: CMakeLists.txt
ryntra-common/include/defs/: ryntra_exceptions.h
ryntra-common/include/utils/ApplicationArgsManager/: ApplicationArgsManager.hpp
ryntra-common/include/utils/ConsoleTextColorManager/: ConsoleTextColorManager.hpp
ryntra-common/src/utils/ApplicationArgsManager/: ApplicationArgsManager.cpp
ryntra-common/src/utils/ConsoleTextColorManager/: ConsoleTextColorManager.cpp
ryntra-compiler/: CMakeLists.txt  main.cpp
ryntra-compiler/Lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
